<resources>
    <string name="app_name">AirMadrid</string>
    <string name="tv_login">Iniciar sesión</string>
    <string name="et_email">Email</string>
    <string name="et_contrasena">Contraseña</string>
    <string name="et_olvido">¿Olvidaste la contraseña?</string>
    <string name="btn_entrar">Entrar</string>
    <string name="tv_login_cc">CREAR CUENTA</string>
    <string name="tv_registro">Crear cuenta</string>
    <string name="et_nombre_comp_reg">Nombre completo</string>
    <string name="et_mail_reg">Email</string>
    <string name="et_pass_reg">Contraseña</string>
    <string name="tv_ini_sesion">INICIAR SESION</string>
    <string name="no_datos">Debe introducir todos los datos</string>
    <string name="msj_registrado">Usuario registrado</string>
    <string name="msj_no_registrado">Usuario no registrado</string>
    <string name="msj_no_accede">Error de acceso</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_chat">Chat</string>
    <string name="title_mapa">Mapa</string>
    <string name="title_home">Home</string>
    <string name="title_redes">Twitter</string>
    <string name="title_privacy">Privacy</string>
    <string name="tv_politica_privada">Built the [AIR MADRID] app as a Free app. This SERVICE is provided by at no cost and is intended for use as is.
\nThis page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.
 \nIf you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.
        \nThe terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at [AIR MADRID] unless otherwise defined in this Privacy Policy.
        \n\n<b>Information Collection and Use</b>
\nFor a better experience, while using our Service, I may require you to provide us with certain personally identifiable information. The information that I request will be retained on your device and is not collected by me in any way.
        \nThe app does use third party services that may collect information used to identify you.
        \n\n<b>Cookies</b>
\nCookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device’s internal memory.
        \nThis Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.
        \n\n<b>Service Providers</b>
\nI may employ third-party companies and individuals due to the following reasons:
\nTo facilitate our Service;
To provide the Service on our behalf;
To perform Service-related services; or
To assist us in analyzing how our Service is used.
I want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.
        \n\n<b>Security</b>
\nI value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.
        \n\n<b>Links to Other Sites</b>
\nThis Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by me. Therefore, I strongly advise you to review the Privacy Policy of these websites. I have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.
        \n\n<b>Children’s Privacy</b>
\nThese Services do not address anyone under the age of 13. I do not knowingly collect personally identifiable information from children under 13. In the case I discover that a child under 13 has provided me with personal information, I immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact me so that I will be able to do necessary actions.
        \n\n<b>Changes to This Privacy Policy</b>
\nI may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.

        \n\n<b>Contact Us</b>
\nIf you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me.\n\n
 andanauem@gmail.com</string>
    <string name="tv_politica_privada_titulo">Privacy Policy</string>
    <string name="btn_cerrar_sesion">Cerrar Sesión</string>
    <string name="btn_cambiar_usuario">Cambiar Usuario</string>
    <string name="tv_titulo_h">Contaminación del aire</string>
    <string name="tv_localizacion_h">ALGETE, MADRID</string>
    <string name="tv_cifra_global_h">74</string>
    <string name="tv_grado_h">MODERADO</string>
    <string name="tv_pm25"><b>PM2.5</b> μg/m<sup>3</sup></string>
    <string name="tv_pm10"><b>PM10</b> μg/m<sup>3</sup></string>
    <string name="tv_so2"><b>SO2</b> μg/m<sup>3</sup></string>
    <string name="tv_no2"><b>NO2</b> μg/m<sup>3</sup></string>
    <string name="tv_contaminantes_h">Contaminantes</string>
    <string name="tv_recomendaciones">Recomendaciones de salud</string>
    <string name="tv_protocolos">Protocolos activos</string>
    <string name="titulo_info_PM25">Información sobre el PM25</string>
    <string name="info_PM25"><b>¿Que es PM2.5?</b>
\nMP2.5 es material particulado flotando en el aire que mide 2,5 micrometros de diámetro o menos.
\nDebido a su pequeño tamaño, MP2.5 tiene la capacidad de ser absorbido por la sangre después de ser inhalado. Es por esta razón que normalmente es el contaminante que presenta la mayor amenaza para la salud.
        \n\n<b>¿Que donde viene?</b>
\nEl material particulado es emitido, ya sea directamente desde fuentes artificiales o naturales, o generadas por reacciones de otros contaminantes con la atmósfera. Las fuentes incluyen la combustión (motor, plantas de energía, quema de leña, etc…), los procesos industriales y las reacciones químicas que se producen entre gases tales como el dióxido de azufre, los óxidos de nitrógeno y los compuestos orgánicos volatiles.
        \n\n<b>¿Como afecta a nuestra salud?</b>
\n\nEfectos a corto plazo:
\n- Irritacion de los ojos, garganta y nariz
\n- Arritmia
\n- Crisis asmáticas
\n- Tos, presión en el pecho y dificultad para respirar
\n\nEfectos a largo plazo:
\n- Enfermedades respiratorias como bronquitis, asma y enfisema
\n- Enfermedades del tejido pulmonar
\n- Cancer
\n- Ataque al corazón
\n- Ictus
\n- Muerte prematura</string>
    <string name="titulo_info_PM10">Información sobre el PM10</string>
    <string name="info_PM10"><b>¿Que es MP10?</b>
\nEl MP10 es material particulado en suspension, ya sea solido o liquido, con un diámetro de 10 micrómetros o menos. La diferencia entre MP10 y MP2.5 es solo una cuestión de tamaño. MP2,5 es muy fino y MP10 es más grande y más grueso.
        \n\n<b>¿De donde viene?</b>
\n- Polvo de la construcción, los vertederos y la agricultura
\n- Polvo del campo abierto
\n- Humo de incendios forestales y la quema de residuos
\n- Reacciones químicas de la industria
\n- Automóviles
        \n\n<b>¿Como afecta a nuestra salud?</b>
\n\nEfectos a corto plazo:
\n- Dificultad respiratoria
\n- Dolor torácico
\n- Malestar general al respirar
\n- Dolor de garganta
\n- Congestion nasal
\n\nEfectos a largo plazo:
\n- Enfermedades del tejido pulmonar
\n -Cancer
\n- Asma
\n- Muerte prematura</string>
    <string name="titulo_info_SO2">Información sobre el SO2</string>
    <string name="info_SO2"><b>¿Que es el dióxido de azufre?</b>
\nEl dióxido de azufre (SO2) es un gas incoloro. Pertenece a un grupo de gases altamente reactivos, conocidos como “óxidos de azufre”. Reaccionan fácilmente entre ellos, para formar una serie de compuestos nocivos, tales como ácido sulfúrico, ácido sulfuroso, y partículas de sulfato
        \n\n<b>¿De donde viene?</b>
\n- Actividades industriales que utilizan materiales con sulfuro para generar electricidad
\n- Automoviles, a consecuencia de la combustion de la gasolina
        \n\n<b>¿Como afectan a nuestra salud?</b>
\nEfectos a corto plazo:
\n- Sibilancias
\n- Presión en el pecho
\n- Dificultad para respirar
\nEfectos a largo plazo:
\n- Enfermedades respiratorias
\n- Alteracion de las defensas de los pulmones
\n- Mayor riesgo de enfermedad cardiovascular</string>
    <string name="titulo_info_NO2">Información sobre el NO2</string>
    <string name="info_NO2">\n<b>¿Que es el dióxido de nitrógeno (NO2)?</b>
\nEl dióxido de nitrógeno (NO2) es un contribuyente significativo a la formación de smog y un precursor de muchos contaminantes secundarios dañinos, incluyendo ozono y material particular.
        \n\n<b>¿De donde viene?</b>
\nEl dióxido de nitrógeno puede tener sus orígenes en fuentes tanto orgánicas como inorgánicas.
\nLas fuentes orgánicas tales como relámpagos, plantas, agua y suelo, solo representan el 1% del dióxido de nitrógeno que se encuentra en las ciudades. El otro 99% proviene de fuentes inorgánicas como las emisiones de automóviles, calentadores de gas sin filtro, cocinas y diversas actividades industriales
\n\n<b>¿Como afecta a nuestra salud?</b>
\nEfectos a corto plazo:
\n- Irritación pulmonar
\n- Menor resistencia a las infecciones respiratorias
\n\nEfectos a largo plazo:
\n- Asma y mayor riesgo de experimentar crisis asmáticas mas frecuentes e intensas
\n- Enfermedades de tejido pulmonar
\n- Muerte prematura</string>
    <string name="error_vuelve">Ooops! Vuelve a intentarlo</string>
    <string name="tv_escenario_h">Ver escenarios</string>
    <string name="dato_no_recogido">-</string>
    <string name="grado_buena">BUENA</string>
    <string name="grado_moderada">MODERADA</string>
    <string name="grado_mala">MALA</string>
    <string name="ventana_verde">Abre las ventanas para que el aire fresco y limpio pase al interior</string>
    <string name="ventana_naranja">Evite ventilar la casa en las horas puntas de su ciudad</string>
    <string name="ventana_roja">Cierre sus ventanas para evitar el aire sucio de fuera</string>
    <string name="bici_verde">Disfrute actividades al aire libre</string>
    <string name="bici_naranja">Los grupos sensibles deben reducir el ejercicio en el exterior</string>
    <string name="bici_roja">Evite realizar ejercicios al aire libre</string>
    <string name="mascarilla_verde">No es necesario el uso de mascarillas en el exterior</string>
    <string name="mascarilla_naranja">Los grupos sensibles deben llevar mascarilla en el exterior</string>
    <string name="mascarilla_roja">Se aconseja el uso de mascarilla en el exterior</string>
    <string name="aire_verde">No es necesario el uso de purificadores de aire</string>
    <string name="aire_naranja">Se aconseja usar purificador de aire para grupos sensibles</string>
    <string name="aire_rojo">Use purificador de aire</string>
    <string name="msj_recomendaciones">Pulse los iconos para más información sobre las recomendaciones</string>
    <string name="cerrar">Cerrar</string>
</resources>