<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/chat_negro"
        android:title="@string/title_chat" />

    <item
        android:id="@+id/navigation_mapa"
        android:icon="@drawable/mapa_negro"
        android:title="@string/title_mapa" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/helices_negro"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_redes"
        android:icon="@drawable/twitter_negro"
        android:title="@string/title_redes" />
    <item
        android:id="@+id/navigation_ajustes"
        android:icon="@drawable/privacy"
        android:title="@string/title_privacy" />

</menu>
