<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_chat"
        android:name="uem.dam.seg.airmadrid.ui.chat.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/navigation_mapa"
        android:name="uem.dam.seg.airmadrid.ui.mapa.MapaFragment"
        android:label="@string/title_mapa"
        tools:layout="@layout/fragment_mapa" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="uem.dam.seg.airmadrid.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_redes"
        android:name="uem.dam.seg.airmadrid.ui.redes.RedesFragment"
        android:label="@string/title_redes"
        tools:layout="@layout/fragment_redes" />
    <fragment
        android:id="@+id/navigation_ajustes"
        android:name="uem.dam.seg.airmadrid.ui.ajustes.AjustesFragment"
        android:label="@string/title_privacy"
        tools:layout="@layout/fragment_ajustes" />
</navigation>