<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_login"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:textColor="@color/skyBlue"/>

    <LinearLayout
        android:id="@+id/llLogin"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLogin">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/et_email"
            style="@style/edit_texts"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/padding"
            android:paddingLeft="@dimen/padding"
            android:background="@drawable/edit_texts"
            android:height="60dp"/>

        <EditText
            android:id="@+id/etContrasena"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/et_contrasena"
            style="@style/edit_texts"
            android:inputType="textPassword"
            android:paddingStart="@dimen/padding"
            android:paddingLeft="@dimen/padding"
            android:background="@drawable/edit_texts"
            android:height="60dp"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tvOlvido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/et_olvido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llLogin"
        android:layout_marginTop="30dp"
        android:textColor="@color/mediumGrey"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        app:layout_constraintBottom_toTopOf="@+id/btnEntrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOlvido" />

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:background="@drawable/botones"
        android:onClick="entrar"
        android:text="@string/btn_entrar"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/tvLoginCC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="50dp"/>

    <TextView
        android:id="@+id/tvLoginCC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="crearCuenta"
        android:text="@string/tv_login_cc"
        android:textColor="@color/mediumGrey"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="25dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>